@@ -1,10 +1,14 @@
+2010-12-31  Christopher  <chrissitopher@gmx.de>
+
+	* Fixed bug #11776: URL/Linktarget for files is broken
+	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
+	* Fixed bug #11803: Fix locallang files
+
 2010-12-30  Christopher  <chrissitopher@gmx.de>
 
 	* Fixed bug #11779: Unify usage of tooltips in table rows
 	* Fixed bug #11775: Table should use new design for TYPO3 4.5
 	* Fixed bug #11796: Improve usage of $GLOBALS['LANG']
-	* Fixed bug #11776: URL/Linktarget for files is broken
-	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
 
 2010-12-28  Pierre Boivin <pierre.boivin@infoglobe.ca>
 
